	  (ENT-7500, ENT-7511)
	- cf-check dump now shows measurement names (ENT-7452)
	- Value of '$(with)' is now expanded even if it contains unresolved variable references
	  (CFE-3776)
	- cf-serverd now binds to both IPV6 and IPV4 if bindtointerface is unspecified
	  (ENT-7362)
	- cf-serverd now reports if it fails to bind to all possible addresses/interfaces
	  (ENT-7362)

3.18.0:
	- "No action for file" warning is no longer triggered when only
	  'content => "something"' is used (CFE-3507)
	- "source=promise_iteration" variables are no longer created in
	  foreign bundles (ENT-7029)
	- 'cf-remote install' now supports the '--trust-keys' option for
	  pre-establishing trust before bootstrap (CFE-3485)
	- 'cf-remote spawn' now supports adding new VMs to an existing group
	  (CFE-3502)
	- 'rename => newname()' now supports relative paths (CFE-3537)
	- 'variables' and 'classes' in CMDB and augments data now support
	  'comment' fields (CFE-3638)
	- Included custom promise type libraries in src tarball
	  (CFE-3575, CFE-3576)
	- --ignore-preferred-augments now sets a hard class; ignore_preferred_augments
	  This class makes it easy for cf-agent / cf-execd policy to
	  propagate the option to other binaries (CFE-3656)
	- Added 'classes' body support for custom promises (CFE-3437)
	- Added a new --simulate=manifest-full mode
	  New simulation mode that manifests all changed files as well as
	  all other files evaluated by the agent run which were not skipped
	  (by file selection rules) (CFE-3506)
	- Added a new runagent_socket_allow_users body executor control attribute
	  A new attribute that tells cf-execd to grant access to the
	  runagent.socket to the specified users (ENT-6735)
	- Added checks to return value from getpwuid & getgrgid (CFE-3521)
	- Added int() policy function (CFE-3616)
	- Added new command line option: --ignore-preferred-augments
	  This option causes the agent to ignore def_preferred.json
	  always reading def.json (old behavior) (CFE-3656)